--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "rootnet-design",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
@@ -11,7 +11,8 @@
     "release": "npm run build && npm publish",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "umi-test --coverage",
+    "upload": "npm version patch && npm run build && npm publish --registry=http://192.168.1.56:8081/repository/npm-hosted/"
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -30,6 +31,7 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "4.2.3"
   },
   "devDependencies": {
