--- a/package.json
+++ b/package.json
@@ -35,15 +35,14 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "4.2.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@umijs/test": "^3.4.25",
-    "dumi": "^1.1.19",
-    "father-build": "^1.19.6",
-    "gh-pages": "^3.2.0",
-    "lint-staged": "^11.0.0",
+    "@umijs/test": "^3.0.5",
+    "dumi": "^1.0.14",
+    "father-build": "^1.17.2",
+    "gh-pages": "^3.0.0",
+    "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
     "yorkie": "^2.0.0"
   }
