--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.1",
+    "typescript": "4.2.3",
     "yorkie": "^2.0.0"
   }
 }
