--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@umijs/test": "^3.0.5",
