--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-transition-group": "^4.4.2"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@umijs/test": "^3.0.5",
