--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "css-animation": "^2.0.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@umijs/test": "^3.0.5",
