--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     ]
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.2",
     "clsx": "^1.1.1",
-    "css-animation": "^2.0.4",
+    "gsap": "^3.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
     "@umijs/test": "^3.0.5",
