--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     ]
   },
   "dependencies": {
-    "@types/react-transition-group": "^4.4.2",
     "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@types/react-transition-group": "^4.4.2",
+    "babel-plugin-import": "^1.13.3",
     "ckeditor5-custom": "^1.0.0",
     "clsx": "^1.1.1",
     "react": "^17.0.2",
