--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
     },
+    "typeRoots": ["./typings"],
     "allowSyntheticDefaultImports": true
   },
   "exclude": [
